cmake_minimum_required(VERSION 3.30)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(1927 1927.cpp)
add_executable(1238 1238.cpp)
add_executable(1005 1005.cpp)
add_executable(1013 1013.cpp)
add_executable(1022 1022.cpp)
add_executable(1027 1027.cpp)
add_executable(1153 1153.cpp)
add_executable(1107 1107.cpp)
add_executable(1034 1034.cpp)
add_executable(1062 1062.cpp)
add_executable(1111 1111.cpp)
add_executable(1358 1358.cpp)
add_executable(7576 7576.cpp)
add_executable(1158 1158.cpp)
add_executable(1394 1394.cpp)
add_executable(1132 1132.cpp)
add_executable(1448 1448.cpp)
add_executable(1455 1455.cpp)
add_executable(2785 2785.cpp)
add_executable(1474 1474.cpp)
add_executable(1900 1900.cpp)
add_executable(1269 1269.cpp)
add_executable(1302 1302.cpp)
add_executable(1874 1874.cpp)
add_executable(1966 1966.cpp)
add_executable(2936 2936.cpp)
add_executable(3097 3097.cpp)
